--- a/module_1/module_1.2/module_1.2.ipynb
+++ b/module_1/module_1.2/module_1.2.ipynb
@@ -5770,11 +5770,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a99cce53-14e7-4d9b-bbc7-409271ceeac0"
+        "outputId": "87577c07-8984-4130-e0c7-1b357fa35fed"
       },
       "source": [
         "# Initialise the dictionary that will contain the names.\n",
-        "houses = {\"Gryffindor\" : [\"Harry\", \"Ron\", \"Hermione\"], \"Slytherin\" : [], \"Ravenclaw\" : [], \"Hufflepuff\" : []}\n",
+        "houses = {\"Gryffindor\" : [\"Harry\", \"Ron\", \"Hermione\"], \"Slytherin\" : [],\n",
+        "          \"Ravenclaw\" : [], \"Hufflepuff\" : []}\n",
         "\n",
         "#houses[\"Gryffindor\"] = [\"Harry\", \"Ron\", \"Hermione\"]\n",
         "#houses[\"Slytherin\"] = [\"Draco\", \"Amycus\"]\n",
@@ -5793,12 +5794,13 @@
         "      if x==\"a\" or x==\"A\" or x==\"e\" or x==\"E\" or x==\"i\" or x==\"I\" or x==\"o\" or x==\"O\" or x==\"u\" or x==\"U\":\n",
         "        vowel_count += 1\n",
         "      else:\n",
-        "        continue\n",
+        "        continue      #to count vowels for Slytherin condition (<3 vowels)\n",
         "\n",
         "    if name == 'exit':\n",
         "        break #stops the look\n",
         "\n",
-        "    elif name == \"Harry\" or name == \"Ron\" or name == \"Hermione\":\n",
+        "    elif name in houses[\"Gryffindor\"]:\n",
+        "      houses[Gryffindor].append(name) #is already in dictionary, but may be multiple Harrys in a house\n",
         "      print(\"Congratulations, you have been assigned to Gryffindor!\")\n",
         "\n",
         "    elif len(name) < 5:\n",
@@ -5813,26 +5815,35 @@
         "      houses[\"Hufflepuff\"].append(name)\n",
         "      print(\"Congratulations, you have been assigned to Hufflepuff!\")\n",
         "\n",
+        "#order of if/elif/else conditions matters as some names satisfy multiple\n",
+        "#conditions, e.g. \"Ron\" is <5 letters AND has <3 vowels so satisfies 3 house\n",
+        "#conditions, but is in Gryffindor as this is the first house condition checked\n",
+        "\n",
         "\n",
         "print(\"Ok, here is the register.\")\n",
         "print(houses)\n"
       ],
-      "execution_count": 167,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "What's your name? \n",
-            "I said tell me your name!\n",
-            "I said tell me your name!\n",
-            "I said tell me your name!\n",
-            "I said tell me your name!\n",
-            "I said tell me your name!dd\n",
+            "What's your name? Harry\n",
+            "Congratulations, you have been assigned to Gryffindor!\n",
+            "What's your name? barry\n",
+            "Congratulations, you have been assigned to Slytherin!\n",
+            "What's your name? larry\n",
+            "Congratulations, you have been assigned to Slytherin!\n",
+            "What's your name? cc\n",
             "Congratulations, you have been assigned to Ravenclaw!\n",
+            "What's your name? aaa\n",
+            "Congratulations, you have been assigned to Ravenclaw!\n",
+            "What's your name? bbbbbbb\n",
+            "Congratulations, you have been assigned to Slytherin!\n",
             "What's your name? exit\n",
             "Ok, here is the register.\n",
-            "{'Gryffindor': ['Harry', 'Ron', 'Hermione'], 'Slytherin': [], 'Ravenclaw': ['dd'], 'Hufflepuff': []}\n"
+            "{'Gryffindor': ['Harry', 'Ron', 'Hermione'], 'Slytherin': ['barry', 'larry', 'bbbbbbb'], 'Ravenclaw': ['cc', 'aaa'], 'Hufflepuff': []}\n"
           ]
         }
       ]
