--- a/module_1/module_1.3/module_1.3.ipynb
+++ b/module_1/module_1.3/module_1.3.ipynb
@@ -213,10 +213,10 @@
       "execution_count": 3,
       "metadata": {
         "id": "tzd9Ktz7iZ-W",
-        "outputId": "2dafcf5e-ea03-4c98-fe9a-2f16f7c0845c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2dafcf5e-ea03-4c98-fe9a-2f16f7c0845c"
       },
       "outputs": [
         {
@@ -298,10 +298,10 @@
       "execution_count": 4,
       "metadata": {
         "id": "t4YQoRhDiZ-m",
-        "outputId": "a1de1349-5dfd-42b1-ac0a-477f73203a3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a1de1349-5dfd-42b1-ac0a-477f73203a3b"
       },
       "outputs": [
         {
@@ -330,10 +330,10 @@
       "execution_count": 5,
       "metadata": {
         "id": "mqn4aCDbiZ-t",
-        "outputId": "05ba8c08-68fb-4261-df10-522cd47a9854",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "05ba8c08-68fb-4261-df10-522cd47a9854"
       },
       "outputs": [
         {
@@ -368,10 +368,10 @@
       "execution_count": 10,
       "metadata": {
         "id": "tfuV5bXEiZ-2",
-        "outputId": "be511a0f-4f17-4850-8be5-963360017200",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "be511a0f-4f17-4850-8be5-963360017200"
       },
       "outputs": [
         {
@@ -433,10 +433,10 @@
       "execution_count": 13,
       "metadata": {
         "id": "57wlqV_tiZ-9",
-        "outputId": "49912822-fafd-4bae-b57c-6d4f229f07ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "49912822-fafd-4bae-b57c-6d4f229f07ff"
       },
       "outputs": [
         {
@@ -499,11 +499,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "VY8cDmgViZ_H"
+        "id": "VY8cDmgViZ_H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "150fb708-938e-4f27-b8be-2ec5b9eeda4f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 12 14\n",
+            "10 12 14\n"
+          ]
+        }
+      ],
       "source": [
         "add_numbers(x = 4, y = 6, z = 8)\n",
         "add_numbers(y = 6, x = 4, z = 8) # out of order, but same arguments"
@@ -530,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "IP-7iag1iZ_P"
       },
@@ -545,11 +558,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "aJdszbfWiZ_T"
+        "id": "aJdszbfWiZ_T",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "72043469-803f-4fe5-9f83-b2b9c36fdf5c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 14 16\n",
+            "10 14 16\n"
+          ]
+        }
+      ],
       "source": [
         "add_numbers_default_value(4)\n",
         "add_numbers_default_value(x = 4)"
@@ -566,11 +592,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "6DU-uk_OiZ_Y"
+        "id": "6DU-uk_OiZ_Y",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "951e733f-9564-4530-a10c-80c6bea7fdf9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12 14 18\n"
+          ]
+        }
+      ],
       "source": [
         "add_numbers_default_value(4, y = 8)"
       ]
@@ -597,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "ij6u6BpaiZ_f"
       },
@@ -610,11 +648,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "-ppQpR_PiZ_j"
+        "id": "-ppQpR_PiZ_j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e1489eb9-a8a5-4204-8129-4a46f7f50b63"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ],
       "source": [
         "result = square(3)\n",
         "print(result)"
@@ -631,7 +681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "8bxlRmU7iZ_p"
       },
@@ -645,11 +695,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "NS4xRUQYiZ_t"
+        "id": "NS4xRUQYiZ_t",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ebf9a212-ab3f-4492-d342-24f0a3e40158"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "None\n"
+          ]
+        }
+      ],
       "source": [
         "result = square_return_noarg(3)\n",
         "print(result)"
@@ -666,7 +728,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "vQvbjx1ciZ_0"
       },
@@ -679,11 +741,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "wTCG4V04iZ_5"
+        "id": "wTCG4V04iZ_5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e497ca51-b3c1-45ad-b45c-a60a6c8d3539"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "None\n"
+          ]
+        }
+      ],
       "source": [
         "result = square_noreturn(3)\n",
         "print(result)"
@@ -700,7 +774,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "4pOEYlxQiaAA"
       },
@@ -715,11 +789,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "7AN0EOD3iaAD"
+        "id": "7AN0EOD3iaAD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2188bffe-5a74-4e2a-d37d-16ada46fee7b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 3, 'b': 4, 'c': 5}\n"
+          ]
+        }
+      ],
       "source": [
         "result = add_numbers_return_dict(1, 2, 3)\n",
         "print(result)"
@@ -736,11 +822,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "tzpjobWniaAH"
+        "id": "tzpjobWniaAH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "61d49986-35de-4644-b1f9-9bc9e2c85eda"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ],
       "source": [
         "def loop_five():\n",
         "    for x in range(0, 25):\n",
@@ -778,15 +881,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
-        "id": "FsBHVlokiaAN"
+        "id": "FsBHVlokiaAN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "728ebe06-9f45-4ccc-fc0b-982dc6216bd5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Don't forget to buy 5 pears\n",
+            "Don't forget to buy 7 apples\n",
+            "Don't forget to buy 4 bananas\n",
+            "Have a nice shopping time\n"
+          ]
+        }
+      ],
       "source": [
         "def print_shopping_list(shopping_list):\n",
-        "    # write here your function\n",
-        "    pass\n",
+        "    for item, quantity in shopping_list.items():\n",
+        "      print(\"Don't forget to buy\", quantity, item)\n",
+        "    print(\"Have a nice shopping time\")\n",
         "\n",
         "# Test your function here!\n",
         "shopping_list = {\"pears\": 5, \"apples\": 7, \"bananas\": 4}\n",
@@ -829,13 +948,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
-        "id": "R-_VNm1liaAR"
+        "id": "R-_VNm1liaAR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a81f5eba-c8da-4d62-a3d2-a1e5e45b6aef"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Don't forget to buy 5 pears\n",
+            "Have a nice shopping time!\n",
+            "Don't forget to buy 7 apples\n",
+            "Have a nice shopping time!\n",
+            "Don't forget to buy 4 bananas\n",
+            "Have a nice shopping time!\n",
+            "Please, give me a valid shopping list!\n",
+            "Don't forget to buy 9 tomatoes\n",
+            "Have a nice shopping time!\n",
+            "Don't forget to buy 1 cat_litter\n",
+            "Have a nice shopping time!\n",
+            "Don't forget to buy 4 thuna_chunks\n",
+            "Have a nice shopping time!\n"
+          ]
+        }
+      ],
       "source": [
         "# Test your improved function here!\n",
+        "def print_shopping_list(shopping_list):\n",
+        "    if type(shopping_list) != dict:\n",
+        "        print(\"Please, give me a valid shopping list!\")\n",
+        "    else:\n",
+        "      for item, quantity in shopping_list.items():\n",
+        "        print(\"Don't forget to buy\", quantity, item)\n",
+        "        print(\"Have a nice shopping time!\")\n",
+        "\n",
+        "\n",
         "print_shopping_list({\"pears\": 5, \"apples\": 7, \"bananas\": 4})\n",
         "print_shopping_list([\"pears\", \"apples\", \"bananas\"])\n",
         "print_shopping_list({\"tomatoes\": 9, \"cat_litter\": 1, \"thuna_chunks\": 4})"
