--- a/module_1/module_1.3/module_1.3.ipynb
+++ b/module_1/module_1.3/module_1.3.ipynb
@@ -1028,15 +1028,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
-        "id": "CGdyxXf5iaAY"
+        "id": "CGdyxXf5iaAY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5b251f2c-4e7c-4bb1-cbc3-eacb2d16f5af"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You'll spend 12.6 GBP\n"
+          ]
+        }
+      ],
       "source": [
         "def calculate_shopping_bill(shopping_list, inventory):\n",
         "    shopping_cost = 0\n",
         "    for item, quantity in shopping_list.items():\n",
+        "      item_cost = inventory[item]\n",
+        "      total_cost = item_cost*quantity\n",
+        "      shopping_cost += total_cost\n",
         "        # TODO: get the total price by summing up the prices of single items\n",
         "\n",
         "    return shopping_cost\n",
