--- a/module_1/module_1.3/module_1.3.ipynb
+++ b/module_1/module_1.3/module_1.3.ipynb
@@ -1373,7 +1373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "NQIs9i20iaAn"
       },
@@ -1385,11 +1385,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
-        "id": "B6HL3dPbiaAq"
+        "id": "B6HL3dPbiaAq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2987194e-398a-45b1-913f-3222038e2c3d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                2\n",
+            "  When forty winters shall besiege thy brow,And dig deep trenches in thy beauty's field, Thy youth's proud livery so gazed on now, Will be a tattered weed of small worth held: Then being asked, where all thy beauty lies, Where all the treasure of thy lusty days; To say within thine own deep sunken eyes, Were an all-eating shame, and thriftless praise. How much more praise deserved thy beauty's use, If thou couldst answer 'This fair child of mine Shall sum my count, and make my old excuse' Proving his beauty by succession thine. This were to be new made when thou art old, And see thy blood warm when thou feel'st it cold.\n"
+          ]
+        }
+      ],
       "source": [
         "text = (\"\"\"                2\n",
         "  When forty winters shall besiege thy brow,\"\"\"\n",
@@ -1441,11 +1454,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
-        "id": "FsD6ZDZoiaAv"
+        "id": "FsD6ZDZoiaAv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2d92a917-6f36-46f0-a3b5-a3b7bda4ef0d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "re.compile(r'\\b[Ww]here\\b', re.UNICODE)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ],
       "source": [
         "p = re.compile(r'\\b[Ww]here\\b')\n",
         "p"
@@ -1468,11 +1496,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
-        "id": "nsC-0yADiaAy"
+        "id": "nsC-0yADiaAy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b45ad88b-d850-4bd5-95f3-809581cfd42d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "None\n"
+          ]
+        }
+      ],
       "source": [
         "m = p.match(text)\n",
         "print(m)"
@@ -1480,11 +1520,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
-        "id": "ccowpuGPiaA3"
+        "id": "ccowpuGPiaA3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "74997aa7-6c74-41c0-9a37-ee9ddf4c42f7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<re.Match object; span=(212, 217), match='where'>\n"
+          ]
+        }
+      ],
       "source": [
         "m = p.search(text)\n",
         "print(m)"
@@ -1505,33 +1557,82 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
-        "id": "PaY8sHs_iaA8"
+        "id": "PaY8sHs_iaA8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "ce384a7e-8c06-42d1-be21-b9c62564518b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'where'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ],
       "source": [
         "m.group()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
-        "id": "F0a_IhgkiaA_"
+        "id": "F0a_IhgkiaA_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "54d033a3-f16b-474a-a433-c5e5881622e6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(212, 217)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ],
       "source": [
         "m.start(), m.end()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
-        "id": "3tGVTSvriaBD"
+        "id": "3tGVTSvriaBD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a1cdffd3-a830-4872-fc87-24f5ff290ccb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(212, 217)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ],
       "source": [
         "m.span()"
       ]
@@ -1549,11 +1650,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
-        "id": "y7sM1cO2iaBG"
+        "id": "y7sM1cO2iaBG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2d8d8ae8-d493-41f3-8034-d34fc66f2230"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['where', 'Where']\n"
+          ]
+        }
+      ],
       "source": [
         "m = p.findall(text)\n",
         "print(m)"
@@ -1570,11 +1683,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
-        "id": "Ivi8A8SJiaBL"
+        "id": "Ivi8A8SJiaBL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1f05dff4-843c-41f3-a059-63bf01479a93"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<re.Match object; span=(212, 217), match='where'>\n",
+            "<re.Match object; span=(239, 244), match='Where'>\n"
+          ]
+        }
+      ],
       "source": [
         "iterator = p.finditer(text)\n",
         "for match in iterator:\n",
@@ -1592,22 +1718,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
-        "id": "yRdjpFxDiaBg"
+        "id": "yRdjpFxDiaBg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "050cfb3b-e167-4e05-882b-6a942d356c70"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<re.Match object; span=(212, 217), match='where'>\n"
+          ]
+        }
+      ],
       "source": [
         "print(re.search(r'\\b[Ww]here\\b', text))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
-        "id": "986gdO8biaBl"
+        "id": "986gdO8biaBl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bffd795c-df21-4d40-a564-083023a029f0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['where', 'Where']\n"
+          ]
+        }
+      ],
       "source": [
         "print(re.findall(r'\\b[Ww]here\\b', text))"
       ]
@@ -1623,11 +1773,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
-        "id": "OBldTtqViaBr"
+        "id": "OBldTtqViaBr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e7600eec-b06c-478e-dee6-455cac0eebe0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "re.compile(r'\\bwhere\\b', re.IGNORECASE|re.UNICODE)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ],
       "source": [
         "p = re.compile(r'\\bwhere\\b', re.I)\n",
         "p"
@@ -1644,11 +1809,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
-        "id": "3JIzadnaiaBw"
+        "id": "3JIzadnaiaBw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ce151c0b-7dea-4094-8959-2f9b68ea4989"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['where', 'Where']\n"
+          ]
+        }
+      ],
       "source": [
         "m = p.findall(text)\n",
         "print(m)"
@@ -2740,12 +2917,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
-        "id": "tkWhkaBIVp8h"
+        "id": "tkWhkaBIVp8h",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b878db8-5a73-48af-c994-97327ef96b93"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter a number: 4\n",
+            "Fibonacci number 4 is: 3\n"
+          ]
+        }
+      ],
+      "source": [
+        "def fib(n):\n",
+        "    a = (1 + 5 ** 0.5) / 2\n",
+        "    b = (1 - 5 ** 0.5) / 2\n",
+        "    return (a ** n - b ** n) / (a - b)\n",
+        "\n",
+        "num = int(input(\"Please enter a number: \"))\n",
+        "\n",
+        "print(\"Fibonacci number\", num, \"is:\", int(fib(num)))"
+      ]
     },
     {
       "cell_type": "markdown",
