--- a/module_1/module_1.3/module_1.3.ipynb
+++ b/module_1/module_1.3/module_1.3.ipynb
@@ -1373,7 +1373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 2,
       "metadata": {
         "id": "NQIs9i20iaAn"
       },
@@ -1385,13 +1385,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 3,
       "metadata": {
         "id": "B6HL3dPbiaAq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2987194e-398a-45b1-913f-3222038e2c3d"
+        "outputId": "1151f17e-1976-4ea8-d2e6-ed29dd3aaa34"
       },
       "outputs": [
         {
@@ -1454,13 +1454,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 4,
       "metadata": {
         "id": "FsD6ZDZoiaAv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d92a917-6f36-46f0-a3b5-a3b7bda4ef0d"
+        "outputId": "8b67abb6-ffb6-4111-aa73-ab6f58b70237"
       },
       "outputs": [
         {
@@ -1471,7 +1471,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 4
         }
       ],
       "source": [
@@ -1496,13 +1496,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 5,
       "metadata": {
         "id": "nsC-0yADiaAy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b45ad88b-d850-4bd5-95f3-809581cfd42d"
+        "outputId": "bdf06d12-918f-4f38-d0e3-e114456cc56c"
       },
       "outputs": [
         {
@@ -1520,13 +1520,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 6,
       "metadata": {
         "id": "ccowpuGPiaA3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "74997aa7-6c74-41c0-9a37-ee9ddf4c42f7"
+        "outputId": "a927da75-42dc-483f-ed14-ea1a0ed7e7af"
       },
       "outputs": [
         {
@@ -1557,14 +1557,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 7,
       "metadata": {
         "id": "PaY8sHs_iaA8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "outputId": "ce384a7e-8c06-42d1-be21-b9c62564518b"
+        "outputId": "4b34ba1e-415c-4961-ad20-bf401c0cc9ee"
       },
       "outputs": [
         {
@@ -1578,7 +1578,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 7
         }
       ],
       "source": [
@@ -1587,13 +1587,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 8,
       "metadata": {
         "id": "F0a_IhgkiaA_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "54d033a3-f16b-474a-a433-c5e5881622e6"
+        "outputId": "808ceeef-8e2b-4cd3-93e9-b192b80deee7"
       },
       "outputs": [
         {
@@ -1604,7 +1604,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 8
         }
       ],
       "source": [
@@ -1613,13 +1613,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 9,
       "metadata": {
         "id": "3tGVTSvriaBD",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a1cdffd3-a830-4872-fc87-24f5ff290ccb"
+        "outputId": "3858d3c0-4161-439a-dc1c-52609e9ad2e8"
       },
       "outputs": [
         {
@@ -1630,7 +1630,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 9
         }
       ],
       "source": [
@@ -1650,13 +1650,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 10,
       "metadata": {
         "id": "y7sM1cO2iaBG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d8d8ae8-d493-41f3-8034-d34fc66f2230"
+        "outputId": "3b9f38e9-de10-4005-e508-17f8cb45420b"
       },
       "outputs": [
         {
@@ -1683,13 +1683,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 11,
       "metadata": {
         "id": "Ivi8A8SJiaBL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1f05dff4-843c-41f3-a059-63bf01479a93"
+        "outputId": "368f1575-88cc-4e50-bd59-5f20940dd3c7"
       },
       "outputs": [
         {
@@ -1718,13 +1718,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 12,
       "metadata": {
         "id": "yRdjpFxDiaBg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "050cfb3b-e167-4e05-882b-6a942d356c70"
+        "outputId": "3805561c-7180-4e40-e08e-7f0beb79ebca"
       },
       "outputs": [
         {
@@ -1741,13 +1741,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 13,
       "metadata": {
         "id": "986gdO8biaBl",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bffd795c-df21-4d40-a564-083023a029f0"
+        "outputId": "a23b4f55-5f8d-4b94-9d71-77d29d32d8a2"
       },
       "outputs": [
         {
@@ -1773,13 +1773,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 14,
       "metadata": {
         "id": "OBldTtqViaBr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e7600eec-b06c-478e-dee6-455cac0eebe0"
+        "outputId": "2740bf18-b99c-47a1-f06c-1420f464768b"
       },
       "outputs": [
         {
@@ -1790,7 +1790,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 14
         }
       ],
       "source": [
@@ -1809,13 +1809,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 15,
       "metadata": {
         "id": "3JIzadnaiaBw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ce151c0b-7dea-4094-8959-2f9b68ea4989"
+        "outputId": "8fbec953-5c12-4896-87ed-21ac1e96fe97"
       },
       "outputs": [
         {
@@ -1846,12 +1846,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "5xWSm_7TiaBz"
+        "id": "5xWSm_7TiaBz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7400a8c8-7dec-4e7c-8fd8-044e0a6ce027"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['thou', 'thou', 'thou']\n"
+          ]
+        }
+      ],
+      "source": [
+        "x = re.compile(r'\\bthou\\b', re.I)\n",
+        "y = x.findall(text)\n",
+        "print(y)\n",
+        "#print(re.findall(r'\\bthou\\b', re.I))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1875,11 +1892,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "X6_7ZXnLiaB2"
+        "id": "X6_7ZXnLiaB2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d6318a4a-ba38-412b-90ba-0f6d8aa60420"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(0, 8)\n"
+          ]
+        }
+      ],
       "source": [
         "p = re.compile('((a(b)c)d)*')\n",
         "m = p.match('abcdabcd')\n",
@@ -1899,11 +1928,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "LAfjKaFiiaB8"
+        "id": "LAfjKaFiiaB8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "30edb2e6-3f4f-4ba0-9ea8-dfd0fe350983"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 8\n",
+            "('abcdabcd', 'abcd', 'abc', 'b')\n",
+            "(4, 7)\n"
+          ]
+        }
+      ],
       "source": [
         "print(m.start(0), m.end(0))\n",
         "print(m.group(0,1,2,3))\n",
@@ -1921,11 +1964,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "_fr1QCupiaB_"
+        "id": "_fr1QCupiaB_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c6605af8-9ef9-4227-a398-6c1626e48a14"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('abcd', 'abc', 'b')\n"
+          ]
+        }
+      ],
       "source": [
         "print(m.groups())"
       ]
@@ -1976,11 +2031,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "R0d5wN3EiaCE"
+        "id": "R0d5wN3EiaCE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0d854c44-2696-4fd0-eb08-ed159b6d9c4d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                2\n",
+            "  When forty winters shall besiege thy brow,And dig deep trenches in thy beauty's field, Thy youth's proud livery so gazed on now, Will be a tattered weed of small worth held: Then being asked, ------ all thy beauty lies, ------ all the treasure of thy lusty days; To say within thine own deep sunken eyes, Were an all-eating shame, and thriftless praise. How much more praise deserved thy beauty's use, If thou couldst answer 'This fair child of mine Shall sum my count, and make my old excuse' Proving his beauty by succession thine. This were to be new made when thou art old, And see thy blood warm when thou feel'st it cold.\n"
+          ]
+        }
+      ],
       "source": [
         "p = re.compile(r'\\b[Ww]here\\b')\n",
         "print(p.sub('------', text))"
@@ -1988,11 +2056,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "WPulxPxviaCG"
+        "id": "WPulxPxviaCG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f01a4cc4-fa3f-41e5-e495-d5535259ddb1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                2\n",
+            "  When forty winters shall besiege thy brow,And dig deep trenches in thy beauty's field, Thy youth's proud livery so gazed on now, Will be a tattered weed of small worth held: Then being asked, ------ all thy beauty lies, Where all the treasure of thy lusty days; To say within thine own deep sunken eyes, Were an all-eating shame, and thriftless praise. How much more praise deserved thy beauty's use, If thou couldst answer 'This fair child of mine Shall sum my count, and make my old excuse' Proving his beauty by succession thine. This were to be new made when thou art old, And see thy blood warm when thou feel'st it cold.\n"
+          ]
+        }
+      ],
       "source": [
         "print(p.sub('------', text, count = 1))"
       ]
@@ -2008,22 +2089,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "ddQiAMARiaCK"
+        "id": "ddQiAMARiaCK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "987424d1-46f8-442b-a812-fb28acad8042"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(\"                2\\n  When forty winters shall besiege thy brow,And dig deep trenches in thy beauty's field, Thy youth's proud livery so gazed on now, Will be a tattered weed of small worth held: Then being asked, ------ all thy beauty lies, ------ all the treasure of thy lusty days; To say within thine own deep sunken eyes, Were an all-eating shame, and thriftless praise. How much more praise deserved thy beauty's use, If thou couldst answer 'This fair child of mine Shall sum my count, and make my old excuse' Proving his beauty by succession thine. This were to be new made when thou art old, And see thy blood warm when thou feel'st it cold.\", 2)\n"
+          ]
+        }
+      ],
       "source": [
         "print(p.subn('------', text))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
-        "id": "deA6T7lniaCN"
+        "id": "deA6T7lniaCN",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "ef6eb014-f1a3-41d0-cc1e-0dd8a16a1a75"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'subsection{First} subsection{second}'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ],
       "source": [
         "p = re.compile('section{ (?P<name> [^}]* ) }', re.VERBOSE)\n",
         "p.sub(r'subsection{\\g<1>}','section{First} section{second}')"
@@ -2134,7 +2246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "pamWKZLQiaCg"
       },
@@ -2172,7 +2284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "K_jzixXQiaCi"
       },
@@ -2261,7 +2373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "XFBi1VfdiaCl"
       },
@@ -2290,7 +2402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "1VzJ-FBRiaCp"
       },
@@ -2315,7 +2427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "PkufxD5RiaCr"
       },
@@ -2342,11 +2454,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "fm4erZi4iaCu"
+        "id": "fm4erZi4iaCu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d15729c3-c78a-457b-a10d-ea23cfdd33c0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Therapist\n",
+            "---------\n",
+            "Talk to the program by typing in plain English, using normal upper-\n",
+            "and lower-case letters and punctuation.  Enter \"quit\" when done.\n",
+            "========================================================================\n",
+            "Hello.  How are you feeling today?\n",
+            "> fine\n",
+            "fine.\n",
+            "> yes\n",
+            "I see.  And what does that tell you?\n",
+            "> that I'm fine\n",
+            "Let's change focus a bit... Tell me about your family.\n",
+            "> they are fine\n",
+            "Let's change focus a bit... Tell me about your family.\n",
+            "> i already told you\n",
+            "I see.  And what does that tell you?\n",
+            "> that you are useless\n",
+            "I see.  And what does that tell you?\n",
+            "> nothing\n",
+            "Why do you say that nothing?\n",
+            "> goodbye\n",
+            "How does that make you feel?\n",
+            "> quit\n",
+            "Good-bye.\n"
+          ]
+        }
+      ],
       "source": [
         "start_eliza()"
       ]
@@ -2380,11 +2527,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
-        "id": "4wX3xoGOVp7v"
+        "id": "4wX3xoGOVp7v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "693b91b1-e3d1-4b08-d854-0071f86b2e70"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                2\n",
+            "  When forty winters shall besiege thy brow,And dig deep trenches in thy beauty's field, Thy youth's proud livery so gazed on now, Will be a tattered weed of small worth held: Then being asked, where all thy beauty lies, Where all the treasure of thy lusty days; To say within thine own deep sunken eyes, Were an all-eating shame, and thriftless praise. How much more praise deserved thy beauty's use, If thou couldst answer 'This fair child of mine Shall sum my count, and make my old excuse' Proving his beauty by succession thine. This were to be new made when thou art old, And see thy blood warm when thou feel'st it cold.\n"
+          ]
+        }
+      ],
       "source": [
         "text = (\"\"\"                2\n",
         "  When forty winters shall besiege thy brow,\"\"\"\n",
@@ -2961,12 +3121,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "MWKcdqMfVp8j"
+        "id": "MWKcdqMfVp8j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49f8c6a3-16fe-4783-a523-855d610c3d67"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 23 token types.\n"
+          ]
+        }
+      ],
+      "source": [
+        "sents = \"\"\"He asked: \"When will you graduate?\"\\n\"I will get my Ph.D. degree(Doctor of Philosophy) in a few years, hehe. And get $123,45675.45.\" I answered. END\"\"\"\n",
+        "\n",
+        "token_types = len(set(sents.split()))\n",
+        "print(\"There are\", token_types, \"token types.\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2984,7 +3161,14 @@
         "id": "SKU-ODFaVp8m"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "sents = \"\"\"He asked: \"When will you graduate?\"\\n\"I will get my Ph.D. degree(Doctor of Philosophy) in a few years, hehe. And get $123,45675.45.\" I answered. END\"\"\"\n",
+        "\n",
+        "nlp = spacy.load(\"en_core_web_sm\")\n",
+        "doc = nlp(sents)\n",
+        "token_types = len(set([token.text for token in doc]))\n",
+        "print(\"There are\", token_types, \"token types.\")"
+      ]
     },
     {
       "cell_type": "markdown",
